--- a/JS-projects/Password-Generator/style.css
+++ b/JS-projects/Password-Generator/style.css
@@ -49,22 +49,8 @@ body {
     font-size: 20px;
 }
 
-input[type="checkbox"] {
-    /* Add your styles here to make the checkboxes look big and beautiful */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 5px;
-
-}
-
-input[type="checkbox"]:checked {
-    background-color: #000;
+.check {
+    /*/////////////////////////*/
 }
 
 .btn {
@@ -72,7 +58,7 @@ input[type="checkbox"]:checked {
     font-size: 20px;
 }
 
-#copy-btn {
+.copy {
     height: 100%;
     width: 20%;
     position: absolute;
@@ -85,24 +71,6 @@ input[type="checkbox"]:checked {
     margin-top: 10%;
 }
 
-#popup-container {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.5s ease;
-}
-
-#popup-content {
-    background-color: #f1f1f1;
-    padding: 20px;
-    border-radius: 4px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    color: #000;
-}
-
-
 /*Border radius*/
 #content {
     --radius: 12px;
@@ -114,7 +82,7 @@ input[type="checkbox"]:checked {
     border-top-right-radius: var(--radius);
 }
 
-#copy-btn {
+.copy {
     border-top-right-radius: var(--radius);
 }
 
