--- a/Game/style.css
+++ b/Game/style.css
@@ -6,12 +6,13 @@
 
 body {
     font-family: "LXGW WenKai TC", cursive;
+    font-size: 18px;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 93vh;
 }
 
 .top-row {
@@ -29,10 +30,11 @@ body {
 
 .slot {
     flex: 1;
-    font-size: 18px;
     text-align: center;
 
-    padding: 5%;
+    padding-top: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +51,6 @@ body {
     width: 100%;
 
     color: rgb(50, 50, 50);
-    font-size: 18px;
     text-align: center;
 
     border-radius: 15px;
@@ -93,8 +94,9 @@ body {
 }
 
 .theme {
-    margin: 5%;
+    margin-bottom: 5%;
     font-weight: 100;
+    font-size: 20px;
 }
 
 .content {
@@ -129,28 +131,30 @@ li {
 }
 
 .category {
-    font-size: 20px;
-    line-height: 0px;
+    font-size: 14px;
+    line-height: 10px;
     vertical-align: text-top;
 }
 
 .word {
-    font-size: 26px;
+    font-size: 20px;
     font-weight: 900;
     text-align: center;
 }
 
 .description {
     height: 30%;
-    font-size: 24px;
-    padding: 2%;
+    font-size: 14px;
+    padding-left: 8%;
+    padding-right: 8%;
 }
 
 .rare-word {
-    font-size: 34px;
+    font-size: 24px;
     font-weight: 900;
     text-align: center;
 
-    margin-top: 12%;
-    padding: 2%;
+    margin-top: 8%;
+    padding-left: 8%;
+    padding-right: 8%;
 }
